# dr2-ingest

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .scalafmt.conf  Cargo.toml  Dockerfile  LICENCE  README.md  build.mill  build.sbt  common.tf  custodial_copy_queue_creator.tf  deploy_roles.tf  dr2-ingest-architecture.drawio  entity_event_generator.tf  ingest_asset_reconciler.tf  ingest_find_existing_asset.tf  ingest_mapper.tf  ingest_start_workflow.tf  ingest_upsert_archive_folders.tf  ingest_workflow_monitor.tf  install.sh  lambda_function.py  pause_preservica_activity.tf  reflect-config.json  resource-config.json  rotate_preservation_system_password.tf  runbooks.tf  terraform.tfvars
.github/: dependabot.yml
.github/scripts/: deploy.py  deploy.sh  upload_files.py
.github/workflows/: build.yml  check-terraform-drift.yml  check.yml  deploy.yml  deploy_lambda.yml  e2e-tests.yml  scala-steward.yml  test.yml  test_plan.yml
anonymise/: Cargo.toml
anonymise/src/: lib.rs
anonymiser_lib/: Cargo.toml
anonymiser_lib/src/: lib.rs
anonymiser_local_script/: Cargo.toml
anonymiser_local_script/src/: main.rs
anonymiser_local_script/tests/: integration_test.rs
common/preingest-adhoc/: metadata-schema.json
common/preingest-dri/: metadata-schema.json
common/preingest-pa/: metadata-schema.json
common/preingest-tdr/: metadata-schema.json
docs/: README.md  ingest.md  metadataPackage.md  postingest.md  preingest-court-documents.md  preingest-tdr.md
docs/architectural-decision-records/: 0020-aggregation-for-tdr-preingest.md
docs/architecture-decision-records/: 0001-record-architectural-decisions.md  0002-extend-departmental-adrs.md  0003-authentication-for-on-premises-servers-with-aws.md  0004-deployment-of-docker-images-to-on-premise-servers.md  0005-preservation-system-security-controls.md  0006-developer-access-to-production.md  0007-single-generic-ingest-function.md  0008-abstract-preservation-system-from-clients.md  0009-uuid-object-keys.md  0010-data-generation-for-integration-environment.md  0011-restrict-vpc-egress.md  0012-publishing-event-notifications.md  0013-technology-choice-for-ingest.md  0014-generic-ingest-architecture.md  0015-bagit-like-package-for-generic-ingest.md  0016-generic-ingest-idempotency.md  0017-add-childCount-attribute-dr2-ingest-files.md  0018-ingest-records-as-assets-not-folders.md  0019-remove-encryption-from-notification-topic.md  0020-aggregation-for-tdr-preingest.md  0021-ingest-flow-control.md  (+12 more)
entity-event-generator/: README.md
ingest-asset-reconciler/: README.md
ingest-check-preservica-for-existing-io/: README.md
ingest-files-change-handler/: README.md
ingest-parsed-court-document-event-handler/: README.md
lambda/: Cargo.toml
lambda/src/: lib.rs  main.rs
lambda/tests/: integration_test.rs
project/: Dependencies.scala  plugins.sbt
rust/lambdas/courtdoc-anonymiser/anonymiser_lib/: Cargo.toml
rust/lambdas/courtdoc-anonymiser/anonymiser_lib/src/: lib.rs
rust/lambdas/courtdoc-anonymiser/anonymiser_local_script/: Cargo.toml
rust/lambdas/courtdoc-anonymiser/anonymiser_local_script/tests/: integration_test.rs
rust/lambdas/courtdoc-anonymiser/lambda/: Cargo.toml
rust/lambdas/courtdoc-anonymiser/lambda/src/: lib.rs  main.rs
rust/lambdas/courtdoc-anonymiser/lambda/tests/: integration_test.rs
src/: main.rs
terraform/: .gitignore  .terraform.lock.hcl  README.md  ad_hoc_ingest.tf  anonymiser.tf  buckets.tf  cc_restore.tf  common.tf  courtdoc_test_input_bucket.tf  custodial_copy.tf  custodial_copy_notifications.tf  custodial_copy_queue_creator.tf  deploy_roles.tf  dns_firewall.tf  dri_migration.tf  dynamo.tf  e2e_tests.tf  entity_event_generator.tf  external_notifications_log.tf  get_latest_preservica_version.tf  ingest.tf  ingest_asset_opex_creator.tf  ingest_asset_reconciler.tf  ingest_failed_notifications.tf  ingest_find_existing_asset.tf  ingest_flow_control.tf  ingest_folder_opex_creator.tf  ingest_mapper.tf  ingest_metric_collector.tf  ingest_opex_creators.tf  ingest_parent_folder_opex_creator.tf  ingest_parsed_court_document_event_handler.tf  ingest_start_workflow.tf  ingest_upsert_archive_folders.tf  ingest_validate_generic_ingest_inputs.tf  ingest_workflow_monitor.tf  ip_lock_checker_lambda.tf  kms.tf  lambda_version_delete.tf  moved.tf  (+17 more)
test/: test_lambda_function.py
testlib/: Cargo.toml
tests/: integration_test.rs
(+609 files in other folders)
