[package]
name = "anonymiser"
version = "0.1.0"
edition = "2021"

[dependencies]
tar = "0.4.40"
flate2 = "1.0.27"
log = "0.4.20"
simple_logger = "4.2.0"
serde_json = "1.0.107"
docx-rs = "0.4.7"
sha256 = "1.4.0"
clap = { version = "4.4.6", features = ["derive"] }
clio = "0.3.4"
shellexpand = "3.1.0"

[profile.release]
lto = "fat"
strip = true

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
