[package]
name = "anonymiser_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tar = "0.4.40"
flate2 = "1.0.27"
log = "0.4.20"
serde_json = "1.0.107"
docx-rs = "0.4.7"
sha256 = "1.4.0"
clio = "0.3.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
testlib = {path = "../testlib"}
assert_fs = "1.0.13"
