[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anonymiser_lib = {path = "../anonymiser_lib", version = "0.1.0"}
anyhow = "1.0.75"
aws-config = "1.0.1"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["sqs"] }
aws-sdk-s3 = "1.3.0"
aws-sdk-sqs = "1.3.0"
lambda_runtime = "0.8.3"
serde_json = "1.0.107"
tokio = { version = "1", features = ["macros"] }
testlib = {path = "../testlib"}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
assert_fs = "1.0.13"
wiremock = "0.5.21"
