[package]
name = "anonymiser_lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
tar = "0.4.44"
flate2 = "1.1.8"
log = "0.4.29"
serde_json = "1.0.149"
docx-rs = "0.4.18"
sha256 = "1.6.0"
clio = "0.3.5"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
testlib = {path = "../testlib"}
assert_fs = "1.1.3"
