[package]
name = "anonymiser"
version = "0.1.0"
edition = "2024"

[dependencies]
anonymiser_lib = {path = "../anonymiser_lib" }
clap = { version = "4.5.59", features = ["derive"] }
log = "0.4.29"
simple_logger = "5.1.0"
shellexpand = "3.1.1"
testlib = {path = "../testlib"}

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.4"
