[package]
name = "lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
anonymiser_lib = {path = "../anonymiser_lib", version = "0.1.0"}
anyhow = "1.0.100"
aws-config = "1.8.12"
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["sqs"] }
aws-sdk-s3 = "1.120.0"
aws-sdk-sqs = "1.92.0"
lambda_runtime = "1.0.2"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros"] }
testlib = {path = "../testlib"}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
assert_fs = "1.1.3"
wiremock = "0.6.5"
